# monstructor

./: CMakeLists.txt  LICENSE  README.md
example/: test.json  test.py
src/: installer.cpp
